# pyaccell

./: .gitignore  .gitmodules  CMakeLists.txt  pyproject.toml
.github/workflows/: wheels.yml
pyaccell/: CMakeLists.txt  shader.cpp  shader.hpp
pyaccell/pyaccell/: __init__.py  automata.cpp  automata.hpp  automata_ext.cpp  binding.cpp  engine.cpp  engine.hpp  framebuffers_screen.fs  rule_conversion.py  rules.cpp  rules.hpp  shader.cpp  shader.hpp  sim.fs  sim.vs
tests/: CMakeLists.txt  sim_tests.cpp  sim_tests.py
