[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "pyaccell"
version = "1.0.0"
description = "A GPU Accelerated Cellular Automata Library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Syed Ahmed Hussain", email = "ahmedhus22@gmail.com" },
]
classifiers = [
    "License :: MIT",
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://github.com/ahmedhus22/pyaccell"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"